--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ quarkus-resteasy = { module = "io.quarkus:quarkus-resteasy", version.ref = "quar
 quarkus-jackson = { module = "io.quarkus:quarkus-resteasy-jackson", version.ref = "quarkus"}
 quarkus-arc = { module = "io.quarkus:quarkus-arc", version.ref = "quarkus"}
 quarkus-junit5 = { module = "io.quarkus:quarkus-junit5", version.ref = "quarkus"}
+quarkus-docker = { module = "io.quarkus:quarkus-container-image-docker", version.ref = "quarkus"}
 rest-assured = { module = "io.rest-assured:rest-assured", version.ref = "rest-assured"}
 
 [plugins]
