Buchung als JPA Entity und entsprechend angepasstes Repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 buchung.input-datum-format=dd.MM.yyyy
 buchung.waehrung=SFr
 
+quarkus.hibernate-orm.database.generation=create
+
 quarkus.log.category."de.bagehorn".level=INFO
 %dev.quarkus.log.category."de.bagehorn".level=DEBUG
