--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
-quarkus = "3.22.1"
+quarkus = "3.23.4"
 rest-assured = "5.5.1"
 
 [libraries]
 quarkus-platform = { module = "io.quarkus.platform:quarkus-bom", version.ref = "quarkus"}
-quarkus-hibernate = { module = "io.quarkus:quarkus-hibernate-orm", version.ref = "quarkus"}
+quarkus-jdbc = { module = "io.quarkus:quarkus-jdbc-postgresql", version.ref = "quarkus"}
+quarkus-hibernate = { module = "io.quarkus:quarkus-hibernate-orm-panache", version.ref = "quarkus"}
 quarkus-h2 = { module = "io.quarkus:quarkus-jdbc-h2", version.ref = "quarkus"}
 quarkus-config = { module = "io.quarkus:quarkus-config-yaml", version.ref = "quarkus"}
 quarkus-resteasy = { module = "io.quarkus:quarkus-resteasy", version.ref = "quarkus"}
