Switch von H2 auf PostgreSQL

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 dependencies {
     implementation enforcedPlatform(libs.quarkus.platform)
     implementation libs.quarkus.hibernate
-    implementation libs.quarkus.h2
+    implementation libs.quarkus.jdbc
     implementation libs.quarkus.config
     implementation libs.quarkus.resteasy
     implementation libs.quarkus.jackson
