--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ buchung.input-datum-format=dd.MM.yyyy
 buchung.waehrung=SFr
 
 quarkus.hibernate-orm.database.generation=create
+quarkus.hibernate-orm.scripts.generation=create
+quarkus.hibernate-orm.scripts.generation.create-target=ddl.sql
 
 quarkus.log.category."de.bagehorn".level=INFO
 %dev.quarkus.log.category."de.bagehorn".level=DEBUG
