--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ dependencies {
     implementation enforcedPlatform(libs.quarkus.platform)
     implementation libs.quarkus.panache
     implementation libs.quarkus.jdbc
+    implementation libs.quarkus.openapi
     implementation libs.quarkus.resteasy
+    implementation libs.quarkus.qute
     implementation libs.quarkus.jackson
     implementation libs.quarkus.arc
     implementation libs.quarkus.docker
