--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,8 +6,10 @@ rest-assured = "5.5.1"
 quarkus-platform = { module = "io.quarkus.platform:quarkus-bom", version.ref = "quarkus"}
 quarkus-jdbc = { module = "io.quarkus:quarkus-jdbc-postgresql", version.ref = "quarkus"}
 quarkus-h2 = { module = "io.quarkus:quarkus-jdbc-h2", version.ref = "quarkus"}
+quarkus-openapi = { module = "io.quarkus:quarkus-smallrye-openapi", version.ref = "quarkus"}
 quarkus-panache = { module = "io.quarkus:quarkus-hibernate-orm-panache", version.ref = "quarkus"}
 quarkus-resteasy = { module = "io.quarkus:quarkus-resteasy", version.ref = "quarkus"}
+quarkus-qute = { module = "io.quarkus:quarkus-resteasy-qute", version.ref = "quarkus"}
 quarkus-jackson = { module = "io.quarkus:quarkus-resteasy-jackson", version.ref = "quarkus"}
 quarkus-arc = { module = "io.quarkus:quarkus-arc", version.ref = "quarkus"}
 quarkus-junit5 = { module = "io.quarkus:quarkus-junit5", version.ref = "quarkus"}
